--- a/packages/core/src/index.html
+++ b/packages/core/src/index.html
@@ -10,6 +10,15 @@
     <script type="module" src="/build/core.esm.js"></script>
     <script nomodule src="/build/core.js"></script>
 
+    <script type="module" src="http://localhost:3334/build/helpers.esm.js"></script>
+    <script nomodule src="http://localhost:3334/build/helpers.js"></script>
+
+    <script type="module" src="http://localhost:3335/build/media.esm.js"></script>
+    <script nomodule src="http://localhost:3335/build/media.js"></script>
+
+    <script type="module" src="http://localhost:3336/build/audio.esm.js"></script>
+    <script nomodule src="http://localhost:3336/build/audio.js"></script>
+
   </head>
   <body>
 
