chore(release): Updating for the BarCamp App

--- a/packages/core/src/index.html
+++ b/packages/core/src/index.html
@@ -20,123 +20,13 @@
       <script nomodule src="http://localhost:3336/build/audio.js"></script>
       
 </head>
-<body>
-      <midwest-theme base="yellow" complement="indigo" body>
-
-      <midwest-layout class="bg-base-2 dm:bg-base-9">
-            <section>
-                  <copy-wrap>
-                        <h1>Header</h1>
-                        <h3>Subhead</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae debitis dolore consectetur, amet sed, veritatis harum necessitatibus pariatur laborum distinctio cupiditate ex eum, omnis optio impedit quas animi facilis cumque?</p>
-                  </copy-wrap>
-                  <midwest-form>
-                        <midwest-grid>
-                              <midwest-input></midwest-input>
-                              <midwest-input type="email"></midwest-input>
-                              <midwest-input type="password"></midwest-input>
-                              <midwest-input type="textarea"></midwest-input>
-                              <midwest-input type="number"></midwest-input>
-                              <midwest-input type="search"></midwest-input>
-                              <midwest-input type="tel"></midwest-input>
-                              <midwest-input type="postal-code"></midwest-input>
-                              <midwest-input type="url"></midwest-input>
-                              <midwest-input type="currency"></midwest-input>
-                              <midwest-select>
-                                    <midwest-item>Nice!</midwest-item>
-                                    <midwest-item>cool!</midwest-item>
-                              </midwest-select>
-                        </midwest-grid>
-                  </midwest-form>
-            </section>
-      </midwest-layout>
-
-      <midwest-theme base="red" complement="indigo">
-            <midwest-layout class="bg-base-2 dm:bg-base-9">
-                  <section>
-                        <copy-wrap>
-                              <h1>Header</h1>
-                              <h3>Subhead</h3>
-                              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae debitis dolore consectetur, amet sed, veritatis harum necessitatibus pariatur laborum distinctio cupiditate ex eum, omnis optio impedit quas animi facilis cumque?</p>
-                        </copy-wrap>
-                        <midwest-form>
-                              <midwest-grid>
-                                    <midwest-input></midwest-input>
-                                    <midwest-input type="email"></midwest-input>
-                                    <midwest-input type="password"></midwest-input>
-                                    <midwest-input type="textarea"></midwest-input>
-                                    <midwest-input type="number"></midwest-input>
-                                    <midwest-input type="search"></midwest-input>
-                                    <midwest-input type="tel"></midwest-input>
-                                    <midwest-input type="postal-code"></midwest-input>
-                                    <midwest-input type="url"></midwest-input>
-                                    <midwest-input type="currency"></midwest-input>
-                                    <midwest-select>
-                                          <midwest-item>Nice!</midwest-item>
-                                          <midwest-item>cool!</midwest-item>
-                                    </midwest-select>
-                              </midwest-grid>
-                        </midwest-form>
-                  </section>
-            </midwest-layout>
+<body class="p-8">
+      <midwest-theme base="yellow" complement="indigo" body system>
+            <midwest-code>
+                  <template>
+                        <midwest-avatar name="William Riley"></midwest-avatar>
+                  </template>
+            </midwest-code>
       </midwest-theme>
-      <midwest-theme base="green" complement="blue" dark>
-            <midwest-layout class="bg-base-2 dm:bg-base-9">
-                  <section>
-                        <copy-wrap>
-                              <h1>Header</h1>
-                              <h3>Subhead</h3>
-                              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae debitis dolore consectetur, amet sed, veritatis harum necessitatibus pariatur laborum distinctio cupiditate ex eum, omnis optio impedit quas animi facilis cumque?</p>
-                        </copy-wrap>
-                        <midwest-form>
-                              <midwest-grid>
-                                    <midwest-input></midwest-input>
-                                    <midwest-input type="email"></midwest-input>
-                                    <midwest-input type="password"></midwest-input>
-                                    <midwest-input type="textarea"></midwest-input>
-                                    <midwest-input type="number"></midwest-input>
-                                    <midwest-input type="search"></midwest-input>
-                                    <midwest-input type="tel"></midwest-input>
-                                    <midwest-input type="postal-code"></midwest-input>
-                                    <midwest-input type="url"></midwest-input>
-                                    <midwest-input type="currency"></midwest-input>
-                                    <midwest-select>
-                                          <midwest-item>Nice!</midwest-item>
-                                          <midwest-item>cool!</midwest-item>
-                                    </midwest-select>
-                              </midwest-grid>
-                        </midwest-form>
-                  </section>
-            </midwest-layout>
-      </midwest-theme>
-
-      <midwest-layout class="bg-base-2 dm:bg-base-9">
-            <section>
-                  <copy-wrap>
-                        <h1>Header</h1>
-                        <h3>Subhead</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae debitis dolore consectetur, amet sed, veritatis harum necessitatibus pariatur laborum distinctio cupiditate ex eum, omnis optio impedit quas animi facilis cumque?</p>
-                  </copy-wrap>
-                  <midwest-form>
-                        <midwest-grid>
-                              <midwest-input></midwest-input>
-                              <midwest-input type="email"></midwest-input>
-                              <midwest-input type="password"></midwest-input>
-                              <midwest-input type="textarea"></midwest-input>
-                              <midwest-input type="number"></midwest-input>
-                              <midwest-input type="search"></midwest-input>
-                              <midwest-input type="tel" autoformat></midwest-input>
-                              <midwest-input type="postal-code" autoformat></midwest-input>
-                              <midwest-input type="url"></midwest-input>
-                              <midwest-input type="currency" autoformat></midwest-input>
-                              <midwest-select>
-                                    <midwest-item>Nice!</midwest-item>
-                                    <midwest-item>cool!</midwest-item>
-                              </midwest-select>
-                        </midwest-grid>
-                  </midwest-form>
-            </section>
-      </midwest-layout>
-</midwest-theme>
 </body>
 </html>
