--- a/packages/core/src/index.html
+++ b/packages/core/src/index.html
@@ -21,12 +21,97 @@
       
 </head>
 <body class="p-8">
-      <midwest-theme base="yellow" complement="indigo" body system>
-            <midwest-code>
-                  <template>
-                        <midwest-avatar name="William Riley"></midwest-avatar>
-                  </template>
-            </midwest-code>
+      <midwest-theme base="red" complement="indigo" body>
+            <div class="flex items-center">
+                  <midwest-switch change-theme>
+                        <p slot="yes">Dark mode</p>
+                        <p slot="no">Light Mode</p>
+                  </midwest-switch>
+                  <midwest-select change-theme="base" style="max-width: 20rem;" class="ml-4">
+                        <midwest-item value="red" checked>Red</midwest-item>
+                        <midwest-item value="orange">orange</midwest-item>
+                        <midwest-item value="gold">gold</midwest-item>
+                        <midwest-item value="yellow">yellow</midwest-item>
+                        <midwest-item value="lime">lime</midwest-item>
+                  </midwest-select>
+            </div>
+            <midwest-layout type="sidebar" size="full" align="start">
+                  <section>
+                  <midwest-code>
+                        <template>
+                              <midwest-avatar name="William Riley"></midwest-avatar>
+                        </template>
+                  </midwest-code>
+                  </section>
+                  <aside>
+                  <midwest-card>
+                        <header>
+                              <h2 class="dm:text-white">Hello</h2>
+                        </header>
+                        <section>
+                              <midwest-grid column-width="350">
+                                    <midwest-input label="nice" description="nice" tooltip="nice"></midwest-input>
+                                    <midwest-input label="nice" description="nice" tooltip="nice"></midwest-input>
+                                    <midwest-input label="nice" description="nice" tooltip="nice"></midwest-input>
+                                    <midwest-input label="nice" description="nice" tooltip="nice"></midwest-input>
+                                    <midwest-input label="nice" description="nice" tooltip="nice"></midwest-input>
+
+                                    <midwest-toggle>
+                                          <midwest-item value="red" checked>Red</midwest-item>
+                                          <midwest-item value="orange">orange</midwest-item>
+                                          <midwest-item value="gold">gold</midwest-item>
+                                          <midwest-item value="yellow">yellow</midwest-item>
+                                          <midwest-item value="lime">lime</midwest-item>
+                                    </midwest-toggle>
+
+                                    <midwest-toggle type="radio">
+                                          <midwest-item value="red" checked>Red</midwest-item>
+                                          <midwest-item value="orange">orange</midwest-item>
+                                          <midwest-item value="gold">gold</midwest-item>
+                                          <midwest-item value="yellow">yellow</midwest-item>
+                                          <midwest-item value="lime">lime</midwest-item>
+                                    </midwest-toggle>
+
+                                    <midwest-toggle block>
+                                          <midwest-item value="red" checked>Red</midwest-item>
+                                          <midwest-item value="orange">orange</midwest-item>
+                                          <midwest-item value="gold">gold</midwest-item>
+                                          <midwest-item value="yellow">yellow</midwest-item>
+                                          <midwest-item value="lime">lime</midwest-item>
+                                    </midwest-toggle>
+
+                                    <midwest-toggle block type="radio">
+                                          <midwest-item value="red" checked>Red</midwest-item>
+                                          <midwest-item value="orange">orange</midwest-item>
+                                          <midwest-item value="gold">gold</midwest-item>
+                                          <midwest-item value="yellow">yellow</midwest-item>
+                                          <midwest-item value="lime">lime</midwest-item>
+                                    </midwest-toggle>
+
+                                    <midwest-toggle block stacking>
+                                          <midwest-item value="red" checked>Red</midwest-item>
+                                          <midwest-item value="orange">orange</midwest-item>
+                                          <midwest-item value="gold">gold</midwest-item>
+                                          <midwest-item value="yellow">yellow</midwest-item>
+                                          <midwest-item value="lime">lime</midwest-item>
+                                    </midwest-toggle>
+
+                                    <midwest-toggle block stacked type="radio">
+                                          <midwest-item value="red" checked>Red</midwest-item>
+                                          <midwest-item value="orange">orange</midwest-item>
+                                          <midwest-item value="gold">gold</midwest-item>
+                                          <midwest-item value="yellow">yellow</midwest-item>
+                                          <midwest-item value="lime">lime</midwest-item>
+                                    </midwest-toggle>
+                              </midwest-grid>
+
+                        </section>
+                        <footer>
+                              <midwest-button type="submit">Save</midwest-button>
+                        </footer>
+                  </midwest-card>
+                  </aside>
+            </midwest-layout>
       </midwest-theme>
 </body>
 </html>
