build(deps): Patch buttons and panels and sidebar

--- a/packages/core/src/index.html
+++ b/packages/core/src/index.html
@@ -27,7 +27,20 @@
   </head>
   <body class="p-8">
     <midwest-theme base="red" complement="indigo" body>
-      <midwest-avatar></midwest-avatar>
+      <midwest-panel id="nice">
+        <midwest-button class="close-button -mr-10" tag="button" circle size="tiny" padding="none" icon-only label="false" activate="#nice">
+          <ion-icon slot="icon" name="close"></ion-icon>
+        </midwest-button>
+        <p>sup</p>
+      </midwest-panel>
+      <midwest-sidebar>
+        <p> sup</p>
+        <midwest-button tag="button" circle size="tiny" padding="none" icon-only label="false" activate="#nice">
+          <ion-icon slot="icon" name="add"></ion-icon>
+        </midwest-button>
+        <midwest-avatar> </midwest-avatar>
+      
+      </midwest-sidebar>
     </midwest-theme>
   </body>
 </html>
