--- a/packages/forms/src/index.html
+++ b/packages/forms/src/index.html
@@ -13,21 +13,40 @@
   <body>
 <midwest-layout padding='tiny' size='medium' style='--layout-grid-gap: 2rem;'>
 
-<copy-wrap align='center'>
-<h4 class='inline-flex items-center gap-4'>
-Region:
-<midwest-select nolabel="true" align="right" class="w-80" name="caregiver_application[region_id]" no-avatars="true" value="1"><midwest-item value="1" label="Omaha <small class='text-gray-6 block'>(Offers Cello, Violin, Viola, and Bass classes)</small>" checked="checked" tag="checkbox" content="Omaha <small class='text-gray-6 block'>(Offers Cello, Violin, Viola, and Bass classes)</small>" settable-content="false">Omaha <small class='text-gray-6 block'>(Offers Cello, Violin, Viola, and Bass classes)</small></midwest-item><midwest-item value="2" label="Scottsbluff <small class='text-gray-6 block'>(Offers Violin classes)</small>" tag="checkbox" content="Scottsbluff <small class='text-gray-6 block'>(Offers Violin classes)</small>" settable-content="false">Scottsbluff <small class='text-gray-6 block'>(Offers Violin classes)</small></midwest-item><midwest-item value="4" label="Council Bluffs <small class='text-gray-6 block'>(Offers Violin classes)</small>" tag="checkbox" content="Council Bluffs <small class='text-gray-6 block'>(Offers Violin classes)</small>" settable-content="false">Council Bluffs <small class='text-gray-6 block'>(Offers Violin classes)</small></midwest-item><midwest-item value="5" label="Kansas City <small class='text-gray-6 block'>(Offers Cello and Violin classes)</small>" tag="checkbox" content="Kansas City <small class='text-gray-6 block'>(Offers Cello and Violin classes)</small>" settable-content="false">Kansas City <small class='text-gray-6 block'>(Offers Cello and Violin classes)</small></midwest-item><midwest-item value="7" label="Fullerton School District, Fullerton CA <small class='text-gray-6 block'>(Offers Violin classes)</small>" tag="checkbox" content="Fullerton School District, Fullerton CA <small class='text-gray-6 block'>(Offers Violin classes)</small>" settable-content="false">Fullerton School District, Fullerton CA <small class='text-gray-6 block'>(Offers Violin classes)</small></midwest-item><midwest-item value="8" label="Fremont <small class='text-gray-6 block'>(Offers Violin classes)</small>" tag="checkbox" content="Fremont <small class='text-gray-6 block'>(Offers Violin classes)</small>" settable-content="false">Fremont <small class='text-gray-6 block'>(Offers Violin classes)</small></midwest-item></midwest-select>
-</h4>
-<h4>
-Program Cycle:
-2021-2022 - Omaha
-</h4>
-<p class='text-xs italic max-w-lg'>
-<strong>Heads up!</strong>
-<br>
-* If you are registering a student for Omaha (bass, cello, or viola class) and another for Council Bluffs (violin only), please fill out an application for each student.
-</p>
-</copy-wrap>
+<midwest-form  action="/updated/pricings" accept-charset="UTF-8" data-remote="true" method="post"><input name="utf8" type="hidden" value="&#x2713;" /><input type="hidden" name="authenticity_token" value="MivIkyJZWmp0GxGmPUdPdaghVrf/UYI/j2FL7slGrNwavbtL3TA8a8Ejs7+P+W6Vmsi3y+WIwdV4ZzWe9fGfgA==" /><midwest-layout size='medium' style='--layout-grid-gap: 2rem;'>
+
+<midwest-card class=' filter drop-shadow' flip-icon='create'>
+<header class='flex'>
+<h3>Edit Pricing Model (Pricing Name)</h3>
+</header>
+<section>
+<midwest-grid cols='1' column-gap='1rem' responsive='false'>
+<midwest-input name="pricing[name]" label="Name" value="Pricing Name"></midwest-input>
+<midwest-input min="2000" max="2100" type="number" name="pricing[year]" label="Year" value="2022"></midwest-input>
+<midwest-select name="pricing[region]" no-avatars="true" label="Region" value="1"><midwest-item value="1" label="Omaha <small class='text-gray-6 block'>(Offers Cello, Violin, Viola, and Bass classes)</small>" checked="checked" tag="checkbox" content="Omaha <small class='text-gray-6 block'>(Offers Cello, Violin, Viola, and Bass classes)</small>" settable-content="false">Omaha <small class='text-gray-6 block'>(Offers Cello, Violin, Viola, and Bass classes)</small></midwest-item><midwest-item value="2" label="Scottsbluff <small class='text-gray-6 block'>(Offers Violin classes)</small>" tag="checkbox" content="Scottsbluff <small class='text-gray-6 block'>(Offers Violin classes)</small>" settable-content="false">Scottsbluff <small class='text-gray-6 block'>(Offers Violin classes)</small></midwest-item><midwest-item value="4" label="Council Bluffs <small class='text-gray-6 block'>(Offers Violin classes)</small>" tag="checkbox" content="Council Bluffs <small class='text-gray-6 block'>(Offers Violin classes)</small>" settable-content="false">Council Bluffs <small class='text-gray-6 block'>(Offers Violin classes)</small></midwest-item><midwest-item value="5" label="Kansas City <small class='text-gray-6 block'>(Offers Cello and Violin classes)</small>" tag="checkbox" content="Kansas City <small class='text-gray-6 block'>(Offers Cello and Violin classes)</small>" settable-content="false">Kansas City <small class='text-gray-6 block'>(Offers Cello and Violin classes)</small></midwest-item><midwest-item value="7" label="Fullerton School District, Fullerton CA <small class='text-gray-6 block'>(Offers Violin classes)</small>" tag="checkbox" content="Fullerton School District, Fullerton CA <small class='text-gray-6 block'>(Offers Violin classes)</small>" settable-content="false">Fullerton School District, Fullerton CA <small class='text-gray-6 block'>(Offers Violin classes)</small></midwest-item><midwest-item value="8" label="Fremont <small class='text-gray-6 block'>(Offers Violin classes)</small>" tag="checkbox" content="Fremont <small class='text-gray-6 block'>(Offers Violin classes)</small>" settable-content="false">Fremont <small class='text-gray-6 block'>(Offers Violin classes)</small></midwest-item></midwest-select>
+<midwest-repeatable-fields add-one-if-empty class='block' data='{"1":{"name":"Free","price":"0","percentage":"200"},"2":{"name":"Charged","price":"600","percentage":"201"}}' verbiage='Pricing tier'>
+<template>
+<div class='bg-gray-0 p-6 b rounded border-default border-gray-1 relative'>
+<midwest-grid column-width='150'>
+<midwest-input name="pricing[tiers][{index}][name]" label="Tier Name" no_magic_name="true"></midwest-input>
+<midwest-input name="pricing[tiers][{index}][price]" label="Price" no_magic_name="true" type="currency"></midwest-input>
+<midwest-input name="pricing[tiers][{index}][percentage]" label="Percentage of Poverty Level" no_magic_name="true" type="number"></midwest-input>
+</midwest-grid>
+</div>
+</template>
+</midwest-repeatable-fields>
+</midwest-grid>
+</section>
+
+<footer class='flex'>
+<midwest-button tag="submit" name="pricing[]" label="">Save</midwest-button>
+<midwest-button ghost="true" class="theme-red" href="/updated/pricings">Cancel
+</midwest-button></footer>
+
+</midwest-card>
+
+</midwest-layout>
+</midwest-form>
 
 </midwest-layout>
   </body>
